force-app/main/default/objects/HFS_Incident__c/HFS_Incident__c.object-meta.xml
<CustomObject>
    <label>HFS Incident</label>
    <nameField>
        <displayFormat>HFSI-{00000}</displayFormat>
        <label>HFS Incident Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HFS Incidents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>