force-app/main/default/objects/HFS_Incident__c/fields/Bag_s_returned_to_guest__c.field-meta.xml
<CustomField>
    <fullName>Bag_s_returned_to_guest__c</fullName>
    <label>Bag(s) returned to guest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>