force-app/main/default/objects/HFS_Incident__c/fields/Brand_Involved__c.field-meta.xml
<CustomField>
    <fullName>Brand_Involved__c</fullName>
    <label>Brand Involved</label>
    <length>200</length>
    <type>Text</type>
</CustomField>