force-app/main/default/objects/HFS_Incident__c/fields/Guest_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Guest_ID_c__c</fullName>
    <formula>HFS_Case__r.Service_Guest_Number__c</formula>
    <label>Guest_ID__c</label>
    <type>Text</type>
</CustomField>