force-app/main/default/objects/HFS_Incident__c/fields/Guest_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Guest_Type_c__c</fullName>
    <formula>HFS_Case__r.Guest_Type__c</formula>
    <label>Guest Type</label>
    <type>Text</type>
</CustomField>