force-app/main/default/objects/HFS_Incident__c/fields/HFS_Case__c.field-meta.xml
<CustomField>
    <fullName>HFS_Case__c</fullName>
    <label>HFS Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>HFS Incidents</relationshipLabel>
    <relationshipName>HFS_Incidents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>