force-app/main/default/objects/HFS_Incident__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>