force-app/main/default/objects/HFS_Incident__c/fields/Incident_Reason__c.field-meta.xml
<CustomField>
    <fullName>Incident_Reason__c</fullName>
    <label>Incident Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bags given to another Guest</fullName>
            </value>
            <value>
                <fullName>Bag(s) at Brand but not picked up</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Technical Fault</fullName>
            </value>
            <value>
                <fullName>Brand was really busy</fullName>
            </value>
            <value>
                <fullName>Lacking Knowledge / Experience of HFS</fullName>
            </value>
            <value>
                <fullName>Brand said they didn&apos;t refuse when asked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>