force-app/main/default/objects/HFS_Incident__c/fields/Incident_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Incident_Reason_Other__c</fullName>
    <label>Incident Reason Other</label>
    <length>250</length>
    <type>Text</type>
</CustomField>