force-app/main/default/objects/HFS_Incident__c/fields/Is_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Is_Resolved__c</fullName>
    <label>Is Resolved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>