force-app/main/default/objects/HFS_Incident__c/fields/Is_Retail_Manager_Aware__c.field-meta.xml
<CustomField>
    <fullName>Is_Retail_Manager_Aware__c</fullName>
    <label>Is Retail Manager Aware</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>