force-app/main/default/objects/HFS_Incident__c/recordTypes/Brand_HFS_Refusals.recordType-meta.xml
<RecordType>
    <fullName>Brand_HFS_Refusals</fullName>
    <active>true</active>
    <label>Brand HFS Refusals</label>
</RecordType>