force-app/main/default/objects/HFS_Incident__c/recordTypes/HFS_Bags_Missing.recordType-meta.xml
<RecordType>
    <fullName>HFS_Bags_Missing</fullName>
    <active>true</active>
    <label>HFS Bags Missing</label>
</RecordType>