force-app/main/default/objects/HFS_Incident__c/recordTypes/HFS_Bags_Wrong_Handover.recordType-meta.xml
<RecordType>
    <fullName>HFS_Bags_Wrong_Handover</fullName>
    <active>true</active>
    <label>HFS Bags Wrong Handover</label>
</RecordType>