force-app/main/default/objects/HFS_Incident__c/validationRules/test_failure.validationRule-meta.xml
<ValidationRule>
    <fullName>test_failure</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW()</errorConditionFormula>
    <errorMessage>test message</errorMessage>
</ValidationRule>